diesel_compile_tests/tests/fail/derive/bad_serialize_as.stderr
error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(serialize_as = Foo)]`
  --> tests/fail/derive/bad_serialize_as.rs:15:26
   |
15 |     #[diesel(serialize_as)]
   |                          ^

error: expected `=`
  --> tests/fail/derive/bad_serialize_as.rs:23:26
   |
23 |     #[diesel(serialize_as(Foo))]
   |                          ^

error: expected identifier
  --> tests/fail/derive/bad_serialize_as.rs:31:29
   |
31 |     #[diesel(serialize_as = "foo")]
   |                             ^^^^^

error: expected identifier
  --> tests/fail/derive/bad_serialize_as.rs:39:29
   |
39 |     #[diesel(serialize_as = 1omg)]
   |                             ^^^^
